--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Victin Generator</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>VITIN GENERATOR - SKRRL</h1>
+    <h2>VITIN GENERATOR SKRRL</h2>
     <form>
       <label for="input-text">Digita aí que o Vitin vai dar o papo!</label>
       <textarea id="input-text"></textarea>
