--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     </div>
     <script src="script.js"></script>
     <div id="footer">
-      <a href="https://instagram.com/weverton.js" target="_blank">👨🏾‍💻 by wev</a>
+      <a href="https://instagram.com/weverton.js" target="_blank">v1.1.0 - 👨🏾‍💻 by wev</a>
     </div>
   </body>
 </html>
